<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:menu="@menu/menu_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/describe_share"
        android:src="@drawable/ic_baseline_share_24"
        android:visibility="invisible"
        app:fabSize="mini"
        app:layout_anchor="@id/button_auto"
        app:layout_anchorGravity="end"
        app:useCompatPadding="true"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginEnd="@dimen/margin_auto_end"
        android:layout_marginRight="@dimen/margin_auto_end"
        android:layout_marginBottom="@dimen/margin_auto_bottom"
        android:contentDescription="@string/describe_auto"
        android:text="@string/button_auto"
        android:visibility="invisible"
        app:iconSize="@dimen/size_button_action"
        app:layout_anchor="@id/bottom_nav"
        app:layout_anchorGravity="end"
        tools:icon="@drawable/ic_outline_play_arrow_24"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:contentDescription="@string/describe_action"
        android:visibility="invisible"
        app:layout_anchor="@id/bottom_nav"
        app:layout_anchorGravity="end"
        app:useCompatPadding="true"
        tools:src="@drawable/ic_baseline_share_24"
        tools:visibility="invisible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>