<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:trackThickness="?attr/actionBarSize" />

    <ImageView
        android:id="@+id/image_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:adjustViewBounds="true"
        android:contentDescription="@string/describe_coin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar"
        tools:src="@drawable/image_coin_heads" />

    <ImageButton
        android:id="@+id/button_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_full"
        android:layout_marginLeft="@dimen/margin_full"
        android:layout_marginTop="@dimen/margin_full"
        android:background="@drawable/ic_button_sound"
        android:contentDescription="@string/describe_sound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

    <ImageButton
        android:id="@+id/button_shake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_full"
        android:layout_marginLeft="@dimen/margin_full"
        android:layout_marginTop="@dimen/margin_full"
        android:background="@drawable/ic_button_shake"
        android:contentDescription="@string/describe_shake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sound" />
</androidx.constraintlayout.widget.ConstraintLayout>